src/test/valid/extensionTests/functionOverloading3.wacc
# attempted redefinition of function

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
int f() is
return 1
end
int f(int a) is
return a
end
int f(int a, int b) is
return b
end
int x = call f(4);
println x
end

